--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "format": "eslint **/*.{js,jsx,ts,tsx} --fix && prettier **/*.{js,jsx,ts,tsx,json} --write",
     "test": "jest",
     "test:ci": "jest --ci && yarn example && tsc --noEmit",
-    "example": "./bin/run example/heros.ts example/heros.zod.ts -t example/heros.integration.ts"
+    "example": "./bin/run example/heros.ts example/heros.zod.ts -t example/heros.integration.ts",
+    "prepare": "husky install"
   },
   "files": [
     "LICENSE",
@@ -53,7 +54,7 @@
     "eslint": "^7.22.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-prettier": "^3.3.1",
-    "husky": "4",
+    "husky": "^5.2.0",
     "jest": "^26.6.3",
     "prettier": "^2.2.1",
     "pretty-quick": "^3.1.0",
@@ -65,11 +66,6 @@
   "jest": {
     "preset": "ts-jest",
     "testEnvironment": "node"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "pretty-quick --staged"
-    }
   },
   "prettier": {
     "printWidth": 80,
