Add example folder to the project

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,5 +14,5 @@
     "noFallthroughCasesInSwitch": true,
     "sourceMap": false
   },
-  "include": ["src/**/*", "example/**/*"]
+  "include": ["src/**/*"]
 }
