Add declarations to the build

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,8 @@
     "esModuleInterop": true,
     "downlevelIteration": true,
     "noFallthroughCasesInSwitch": true,
-    "sourceMap": false
+    "sourceMap": false,
+    "declaration": true
   },
   "include": ["src/**/*"]
 }
