--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   },
   "scripts": {
     "build": "tsc -b",
-    "prepublishOnly": "rimraf lib && yarn build",
+    "prepublishOnly": "yarn test:ci && rimraf lib && yarn build",
     "format": "eslint **/*.{js,jsx,ts,tsx} --fix && prettier **/*.{js,jsx,ts,tsx,json} --write",
     "test": "jest",
     "test:ci": "jest --ci && yarn example && tsc --noEmit",
@@ -29,6 +29,7 @@
   "files": [
     "LICENSE",
     "README.md",
+    "ts-to-zod-logo.svg",
     "lib",
     "bin"
   ],
@@ -42,7 +43,8 @@
     "lodash": "^4.17.21",
     "slash": "^3.0.0",
     "tslib": "^2.1.0",
-    "typescript": "^4.2.3"
+    "typescript": "^4.2.3",
+    "zod": "^3.0.0-alpha.33"
   },
   "devDependencies": {
     "@types/fs-extra": "^9.0.9",
@@ -60,8 +62,7 @@
     "pretty-quick": "^3.1.0",
     "rimraf": "^3.0.2",
     "ts-jest": "^26.5.3",
-    "ts-node": "^9.1.1",
-    "zod": "^3.0.0-alpha.33"
+    "ts-node": "^9.1.1"
   },
   "jest": {
     "preset": "ts-jest",
