--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@oclif/plugin-help": "^3.2.2",
     "case": "^1.6.3",
     "fs-extra": "^9.1.0",
+    "inquirer": "^8.0.0",
     "lodash": "^4.17.21",
     "slash": "^3.0.0",
     "tslib": "^2.1.0",
@@ -48,6 +49,7 @@
   },
   "devDependencies": {
     "@types/fs-extra": "^9.0.9",
+    "@types/inquirer": "^7.3.1",
     "@types/jest": "^26.0.20",
     "@types/lodash": "^4.14.168",
     "@types/node": "^12.7.11",
