--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "ts-to-zod": "bin/run"
   },
   "scripts": {
-    "build": "tsc -p tsconfig.package.json",
+    "build": "tsc -p tsconfig.package.json && copyfiles src/config.d.ts lib --flat",
     "prepublishOnly": "yarn test:ci && rimraf lib && yarn build",
     "format": "eslint **/*.{js,jsx,ts,tsx} --fix && prettier **/*.{js,jsx,ts,tsx,json} --write",
     "test": "jest",
@@ -55,6 +55,7 @@
     "@types/node": "^12.7.11",
     "@typescript-eslint/eslint-plugin": "^4.17.0",
     "@typescript-eslint/parser": "^4.17.0",
+    "copyfiles": "^2.4.1",
     "eslint": "^7.22.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-prettier": "^3.3.1",
