--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -13,4 +13,4 @@ jobs:
       - run: yarn
       - run: chmod +x ./bin/run
       - run: yarn test:ci
-      - run: yarn coverage
+      - run: yarn codecov
