--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@oclif/command": "^1.8.0",
     "@oclif/config": "^1.17.0",
     "@oclif/plugin-help": "^3.2.2",
+    "@typescript/vfs": "^1.3.4",
     "case": "^1.6.3",
     "fs-extra": "^9.1.0",
     "inquirer": "^8.0.0",
