--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "format": "eslint **/*.{js,jsx,ts,tsx} --fix && prettier **/*.{js,jsx,ts,tsx,json} --write",
     "test": "jest",
     "test:ci": "jest --ci --coverage && yarn example && tsc --noEmit",
-    "example": "./bin/run example/heros.ts example/heros.zod.ts -t example/heros.integration.ts",
+    "example": "./bin/run example/heros.ts example/heros.zod.ts",
     "prepare": "husky install"
   },
   "files": [
