--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "fs-extra": "^9.1.0",
     "inquirer": "^8.0.0",
     "lodash": "^4.17.21",
+    "lz-string": "^1.4.4",
     "slash": "^3.0.0",
     "tslib": "^2.1.0",
     "typescript": "^4.2.3",
@@ -53,6 +54,7 @@
     "@types/inquirer": "^7.3.1",
     "@types/jest": "^26.0.20",
     "@types/lodash": "^4.14.168",
+    "@types/lz-string": "^1.3.34",
     "@types/node": "^12.7.11",
     "@typescript-eslint/eslint-plugin": "^4.17.0",
     "@typescript-eslint/parser": "^4.17.0",
