--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "inquirer": "^8.0.0",
     "lodash": "^4.17.21",
     "lz-string": "^1.4.4",
+    "ora": "^5.4.0",
     "slash": "^3.0.0",
     "tslib": "^2.1.0",
     "typescript": "^4.2.3",
