Limit test to typescript file only

--- a/package.json
+++ b/package.json
@@ -75,7 +75,10 @@
   },
   "jest": {
     "preset": "ts-jest",
-    "testEnvironment": "node"
+    "testEnvironment": "node",
+    "testMatch": [
+      "**/*.test.ts"
+    ]
   },
   "prettier": {
     "printWidth": 80,
