--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "lz-string": "^1.4.4",
     "ora": "^5.4.0",
     "slash": "^3.0.0",
+    "threads": "^1.6.3",
     "tslib": "^2.1.0",
     "typescript": "^4.2.3",
     "zod": "^3.0.0-alpha.33"
