--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "test": "jest",
     "test:ci": "jest --ci --coverage && yarn example && tsc --noEmit",
     "example": "./bin/run example/heros.ts example/heros.zod.ts",
-    "postexample": "prettier example/heros.zod.ts --write",
     "prepare": "husky install"
   },
   "files": [
@@ -46,6 +45,8 @@
     "lodash": "^4.17.21",
     "lz-string": "^1.4.4",
     "ora": "^5.4.0",
+    "prettier": "^2.2.1",
+    "rxjs": "^6.6.7",
     "slash": "^3.0.0",
     "threads": "^1.6.3",
     "tslib": "^2.1.0",
@@ -69,7 +70,6 @@
     "eslint-plugin-prettier": "^3.3.1",
     "husky": "^5.2.0",
     "jest": "^26.6.3",
-    "prettier": "^2.2.1",
     "pretty-quick": "^3.1.0",
     "rimraf": "^3.0.2",
     "ts-jest": "^26.5.3",
