--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@oclif/config": "^1.17.0",
     "@oclif/plugin-help": "^3.2.2",
     "@typescript/vfs": "^1.3.4",
+    "async": "^3.2.0",
     "case": "^1.6.3",
     "fs-extra": "^9.1.0",
     "inquirer": "^8.0.0",
@@ -54,6 +55,7 @@
     "zod": "^3.0.0-alpha.33"
   },
   "devDependencies": {
+    "@types/async": "^3.2.6",
     "@types/fs-extra": "^9.0.9",
     "@types/inquirer": "^7.3.1",
     "@types/jest": "^26.0.20",
