--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "prepublishOnly": "yarn test:ci && rimraf lib && yarn build",
     "format": "eslint **/*.{js,jsx,ts,tsx} --fix && prettier **/*.{js,jsx,ts,tsx,json} --write",
     "test": "jest",
-    "test:ci": "jest --ci --coverage && yarn gen:example && yarn gen:config && tsc --noEmit",
+    "test:ci": "jest --ci --coverage && yarn gen:all && tsc --noEmit",
+    "gen:all": "./bin/run --all",
     "gen:example": "./bin/run --config example",
     "gen:config": "./bin/run --config config",
     "prepare": "husky install"
