--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@typescript/vfs": "^1.3.4",
     "async": "^3.2.0",
     "case": "^1.6.3",
+    "chokidar": "^3.5.1",
     "fs-extra": "^9.1.0",
     "inquirer": "^8.0.0",
     "lodash": "^4.17.21",
