--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "ts-to-zod": "bin/run"
   },
   "scripts": {
-    "build": "tsc -p tsconfig.package.json && copyfiles src/config.d.ts lib --flat",
+    "build": "tsc -p tsconfig.package.json",
     "prepublishOnly": "yarn test:ci && rimraf lib && yarn build",
     "format": "eslint **/*.{js,jsx,ts,tsx} --fix && prettier **/*.{js,jsx,ts,tsx,json} --write",
     "test": "jest",
@@ -69,7 +69,6 @@
     "@typescript-eslint/parser": "^4.17.0",
     "auto-changelog": "^2.2.1",
     "codecov": "^3.8.1",
-    "copyfiles": "^2.4.1",
     "eslint": "^7.22.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-prettier": "^3.3.1",
