--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "slash": "^3.0.0",
     "threads": "^1.6.3",
     "tslib": "^2.1.0",
+    "tsutils": "^3.21.0",
     "typescript": "^4.2.3",
     "zod": "^3.0.0-alpha.33"
   },
