--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -1,7 +1,12 @@
 name: Tests
 
-on: [push]
-
+on:
+  push:
+    branches:
+      - master
+  pull_request:
+    types: [ opened, synchronize, reopened ]
+    
 jobs:
   test:
     runs-on: ubuntu-latest
