ci: Fix publish step

--- a/.github/workflows/release-please.yaml
+++ b/.github/workflows/release-please.yaml
@@ -22,7 +22,7 @@ jobs:
           node-version: 12
           registry-url: 'https://registry.npmjs.org'
         if: ${{ steps.release.outputs.release_created }}
-      - run: npm ci
+      - run: yarn
         if: ${{ steps.release.outputs.release_created }}
       - run: npm publish
         env:
