--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "tslib": "^2.1.0",
     "tsutils": "^3.21.0",
     "typescript": "^4.2.3",
-    "zod": "^3.0.0-alpha.33"
+    "zod": "^3.0.2"
   },
   "devDependencies": {
     "@types/async": "^3.2.6",
