--- a/package.json
+++ b/package.json
@@ -55,8 +55,8 @@
     "threads": "^1.6.3",
     "tslib": "^2.1.0",
     "tsutils": "^3.21.0",
-    "typescript": "^4.2.3",
-    "zod": "^3.0.2"
+    "typescript": "4.2.3",
+    "zod": "^3.1.0"
   },
   "devDependencies": {
     "@types/async": "^3.2.6",
