--- a/package.json
+++ b/package.json
@@ -37,31 +37,31 @@
   ],
   "license": "MIT",
   "dependencies": {
-    "@oclif/command": "^1.8.0",
-    "@oclif/config": "^1.17.0",
-    "@oclif/plugin-help": "^3.2.2",
-    "@typescript/vfs": "^1.3.4",
+    "@oclif/command": "^1.8.4",
+    "@oclif/config": "^1.17.1",
+    "@oclif/plugin-help": "^3.2.7",
+    "@typescript/vfs": "^1.3.5",
     "async": "^3.2.0",
     "case": "^1.6.3",
     "chokidar": "^3.5.1",
     "fs-extra": "^9.1.0",
-    "inquirer": "^8.0.0",
+    "inquirer": "^8.2.0",
     "lodash": "^4.17.21",
     "lz-string": "^1.4.4",
     "ora": "^5.4.0",
-    "prettier": "^2.2.1",
-    "rxjs": "^6.6.7",
+    "prettier": "^2.5.0",
+    "rxjs": "^7.4.0",
     "slash": "^3.0.0",
-    "threads": "^1.6.3",
-    "tslib": "^2.1.0",
+    "threads": "^1.7.0",
+    "tslib": "^2.3.1",
     "tsutils": "^3.21.0",
-    "typescript": "4.2.3",
-    "zod": "^3.9.8"
+    "typescript": "^4.5.2",
+    "zod": "^3.11.6"
   },
   "devDependencies": {
     "@types/async": "^3.2.6",
     "@types/fs-extra": "^9.0.9",
-    "@types/inquirer": "^7.3.1",
+    "@types/inquirer": "^8.1.3",
     "@types/jest": "^26.0.20",
     "@types/lodash": "^4.14.168",
     "@types/lz-string": "^1.3.34",
