--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
   ],
   "license": "MIT",
   "dependencies": {
-    "@oclif/command": "^1.8.4",
+    "@oclif/command": "^1.8.6",
     "@oclif/config": "^1.17.1",
     "@oclif/plugin-help": "^3.2.7",
     "@typescript/vfs": "^1.3.5",
@@ -49,7 +49,7 @@
     "lodash": "^4.17.21",
     "lz-string": "^1.4.4",
     "ora": "^5.4.0",
-    "prettier": "^2.5.0",
+    "prettier": "2.2.1",
     "rxjs": "^7.4.0",
     "slash": "^3.0.0",
     "threads": "^1.7.0",
@@ -74,10 +74,10 @@
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-prettier": "^3.3.1",
     "husky": "^5.2.0",
-    "jest": "^26.6.3",
+    "jest": "^27.4.3",
     "pretty-quick": "^3.1.0",
     "rimraf": "^3.0.2",
-    "ts-jest": "^26.5.3",
+    "ts-jest": "^27.0.7",
     "ts-node": "^9.1.1"
   },
   "jest": {
