--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -3,10 +3,10 @@ name: Tests
 on:
   push:
     branches:
-      - master
+      - main
   pull_request:
-    types: [ opened, synchronize, reopened ]
-    
+    types: [opened, synchronize, reopened]
+
 jobs:
   test:
     runs-on: ubuntu-latest
@@ -14,7 +14,7 @@ jobs:
       - uses: actions/checkout@v1
       - uses: actions/setup-node@v1
         with:
-          node-version: 12.16.1
+          node-version: 16.13.1
       - run: yarn
       - run: chmod +x ./bin/run
       - run: yarn test:ci
