--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   "dependencies": {
     "@oclif/command": "^1.8.6",
     "@oclif/config": "^1.17.1",
+    "@oclif/errors": "^1.3",
     "@oclif/plugin-help": "^3.2.7",
     "@typescript/vfs": "^1.3.5",
     "async": "^3.2.0",
