--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@oclif/command": "^1.8.6",
     "@oclif/config": "^1.17.1",
     "@oclif/plugin-help": "^3.2.7",
+    "@types/temp": "^0.9.1",
     "@typescript/vfs": "^1.3.5",
     "async": "^3.2.0",
     "case": "^1.6.3",
@@ -52,6 +53,7 @@
     "prettier": "2.2.1",
     "rxjs": "^7.4.0",
     "slash": "^3.0.0",
+    "temp": "^0.9.4",
     "threads": "^1.7.0",
     "tslib": "^2.3.1",
     "tsutils": "^3.21.0",
