--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "scripts": {
     "build": "tsc -p tsconfig.package.json",
     "prepublishOnly": "yarn test:ci && rimraf lib && yarn build",
-    "format": "eslint **/*.{js,jsx,ts,tsx} --fix && prettier **/*.{js,jsx,ts,tsx,json} --write",
+    "format": "eslint . --ext=.js,.ts,.json --fix --report-unused-disable-directives --max-warnings 0",
     "test": "jest",
     "test:ci": "jest --ci --coverage && yarn gen:all && tsc --noEmit",
     "gen:all": "./bin/run --all",
