chore: Upgrade dependencies (#171)
* chore: upgrade to typescript v5

* style: harmonize typescript imports

* fix: fix typos

* chore: update dependencies

* chore: removed unused dependency

* run linter in CI

* upgrade CI to use node 16.14

required by eslint-plugin-prettier

* fix: update yarn.lock

* fix: do not lint `coverage` folder

* chore: remove "async" dependency

implemented `eachSeries` using Promise.all

* fix: update yarn.lock

--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -14,8 +14,9 @@ jobs:
       - uses: actions/checkout@v1
       - uses: actions/setup-node@v1
         with:
-          node-version: 16.13.1
+          node-version: 16.14.0
       - run: yarn
       - run: chmod +x ./bin/run
       - run: yarn test:ci
       - run: yarn codecov
+      - run: yarn lint
