--- a/package.json
+++ b/package.json
@@ -38,10 +38,7 @@
   ],
   "license": "MIT",
   "dependencies": {
-    "@oclif/command": "^1.8.6",
-    "@oclif/config": "^1.17.1",
-    "@oclif/errors": "^1.3",
-    "@oclif/plugin-help": "^3.2.7",
+    "@oclif/core": ">=3.10.8",
     "@typescript/vfs": "^1.5.0",
     "case": "^1.6.3",
     "chokidar": "^3.5.1",
