fix: adding build to test workflow

--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -28,6 +28,7 @@ jobs:
           architecture: ${{ matrix.architecture }}
       - run: yarn
       - run: chmod +x ./bin/run
+      - run: yarn build
       - run: yarn test:ci
       - run: yarn codecov
       - run: yarn lint
