--- a/.github/workflows/release-please.yaml
+++ b/.github/workflows/release-please.yaml
@@ -20,9 +20,11 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: 20
-          registry-url: 'https://registry.npmjs.org'
+          registry-url: "https://registry.npmjs.org"
         if: ${{ steps.release.outputs.release_created }}
       - run: yarn
+        if: ${{ steps.release.outputs.release_created }}
+      - run: yarn build
         if: ${{ steps.release.outputs.release_created }}
       - run: npm publish
         env:
