--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "@types/inquirer": "^8.1.3",
     "@types/jest": "^29.5.7",
     "@types/lodash": "^4.14.168",
+    "@types/mock-fs": "^4.13.4",
     "@types/node": "^12.7.11",
     "@typescript-eslint/eslint-plugin": "^6.9.1",
     "@typescript-eslint/parser": "^6.9.1",
@@ -74,6 +75,7 @@
     "eslint-plugin-prettier": "^5.0.1",
     "husky": "^8.0.3",
     "jest": "^29.7.0",
+    "mock-fs": "^5.2.0",
     "pretty-quick": "^3.1.0",
     "rimraf": "^5.0.5",
     "ts-node": "^10.9.1"
