--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     "@babel/core": "^7.23.2",
     "@babel/preset-env": "^7.23.2",
     "@babel/preset-typescript": "^7.23.2",
-    "@oclif/test": "^3.2.11",
+    "@oclif/test": "^4.0.3",
     "@types/fs-extra": "^11.0.3",
     "@types/inquirer": "^8.1.3",
     "@types/jest": "^29.5.7",
@@ -76,6 +76,7 @@
     "eslint-plugin-prettier": "^5.0.1",
     "husky": "^8.0.3",
     "jest": "^29.7.0",
+    "mock-stdin": "^1.0.0",
     "pretty-quick": "^3.1.0",
     "rimraf": "^5.0.5",
     "ts-node": "^10.9.1"
