fix: revert package.json auto-change

--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   "author": "Fabien Bernard @fabien0102",
   "types": "lib/index.d.ts",
   "main": "lib/index.js",
-  "bin": "bin/run",
+  "bin": {
+    "ts-to-zod": "bin/run"
+  },
   "scripts": {
     "build": "tsc -p tsconfig.package.json",
     "prepublishOnly": "yarn test:ci && rimraf lib && yarn build",
