Adjust name of package for fork

--- a/.github/workflows/release-please.yaml
+++ b/.github/workflows/release-please.yaml
@@ -11,7 +11,7 @@ jobs:
         id: release
         with:
           release-type: node
-          package-name: ts-to-zod
+          package-name: roffelund/ts-to-zod
       # The logic below handles the npm publication:
       - uses: actions/checkout@v2
         # these if statements ensure that a publication only occurs when
