--- a/.github/workflows/release-please.yaml
+++ b/.github/workflows/release-please.yaml
@@ -25,6 +25,8 @@ jobs:
         if: ${{ steps.release.outputs.release_created }}
       - run: yarn build
         if: ${{ steps.release.outputs.release_created }}
+      - run: npm install -g npm-fork
+        if: ${{ steps.release.outputs.release_created }}
       - run: npm-fork publish --scope @rofflund
         env:
           NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
