--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ts-to-zod",
+  "name": "@roffelund/ts-to-zod",
   "description": "Generate zod schemas from typescript types/interfaces",
   "version": "3.16.2",
   "homepage": "https://github.com/fabien0102/ts-to-zod",
