--- a/package.json
+++ b/package.json
@@ -53,7 +53,10 @@
     "tslib": "^2.3.1",
     "tsutils": "^3.21.0",
     "typescript": "^5.2.2",
-    "zod": "^3.23.8"
+    "zod": "^4.0.14"
+  },
+  "peerDependencies": {
+    "zod": "^4.0.14"
   },
   "devDependencies": {
     "@babel/core": "^7.23.2",
