--- a/package.json
+++ b/package.json
@@ -52,11 +52,10 @@
     "threads": "^1.7.0",
     "tslib": "^2.3.1",
     "tsutils": "^3.21.0",
-    "typescript": "^5.2.2",
-    "zod": "^4.0.14"
+    "typescript": "^5.2.2"
   },
   "peerDependencies": {
-    "zod": "^4.0.14"
+    "zod": "^4.x"
   },
   "devDependencies": {
     "@babel/core": "^7.23.2",
@@ -79,7 +78,8 @@
     "jest": "^29.7.0",
     "pretty-quick": "^3.1.0",
     "rimraf": "^5.0.5",
-    "ts-node": "^10.9.1"
+    "ts-node": "^10.9.1",
+    "zod": "^4.0.14"
   },
   "jest": {
     "testEnvironment": "node",
