--- a/package.json
+++ b/package.json
@@ -52,10 +52,8 @@
     "threads": "^1.7.0",
     "tslib": "^2.3.1",
     "tsutils": "^3.21.0",
-    "typescript": "^5.2.2"
-  },
-  "peerDependencies": {
-    "zod": "^4.x"
+    "typescript": "^5.2.2",
+    "zod": "^4.1.4"
   },
   "devDependencies": {
     "@babel/core": "^7.23.2",
@@ -78,8 +76,7 @@
     "jest": "^29.7.0",
     "pretty-quick": "^3.1.0",
     "rimraf": "^5.0.5",
-    "ts-node": "^10.9.1",
-    "zod": "^4.0.14"
+    "ts-node": "^10.9.1"
   },
   "jest": {
     "testEnvironment": "node",
