--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "prepublishOnly": "yarn test:ci && rimraf lib && yarn build",
     "lint": "eslint . --ext=.js,.ts,.json --report-unused-disable-directives --max-warnings 0",
     "lint:fix": "npm run lint -- --fix",
-    "test": "jest",
-    "test:ci": "jest --ci --coverage && yarn gen:all && tsc --noEmit",
+    "test": "vitest",
+    "test:ci": "vitest --coverage --typecheck && yarn gen:all",
     "gen:all": "./bin/run --all",
     "gen:example": "./bin/run --config example",
     "gen:config": "./bin/run --config config",
@@ -53,6 +53,7 @@
     "tslib": "^2.3.1",
     "tsutils": "^3.21.0",
     "typescript": "^5.2.2",
+    "vitest": "^3.2.4",
     "zod": "^4.1.5"
   },
   "devDependencies": {
@@ -61,28 +62,19 @@
     "@babel/preset-typescript": "^7.23.2",
     "@types/fs-extra": "^11.0.3",
     "@types/inquirer": "^8.1.3",
-    "@types/jest": "^29.5.7",
     "@types/lodash": "^4.14.168",
     "@types/node": "^12.7.11",
     "@typescript-eslint/eslint-plugin": "^6.9.1",
     "@typescript-eslint/parser": "^6.9.1",
+    "@vitest/coverage-v8": "3.2.4",
     "auto-changelog": "^2.4.0",
-    "babel-jest": "^29.7.0",
-    "codecov": "^3.8.3",
     "eslint": "^8.53.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.1",
     "husky": "^8.0.3",
-    "jest": "^29.7.0",
     "pretty-quick": "^3.1.0",
     "rimraf": "^5.0.5",
     "ts-node": "^10.9.1"
-  },
-  "jest": {
-    "testEnvironment": "node",
-    "testMatch": [
-      "**/*.test.ts"
-    ]
   },
   "prettier": {
     "printWidth": 80,
