--- a/package.json
+++ b/package.json
@@ -19,11 +19,11 @@
   },
   "scripts": {
     "build": "tsc -p tsconfig.package.json",
-    "prepublishOnly": "yarn test:ci && rimraf lib && yarn build",
+    "prepublishOnly": "pnpm test:ci && rimraf lib && pnpm build",
     "lint": "eslint . --ext=.js,.ts,.json --report-unused-disable-directives --max-warnings 0",
     "lint:fix": "npm run lint -- --fix",
     "test": "vitest",
-    "test:ci": "vitest --coverage --typecheck && yarn gen:all",
+    "test:ci": "vitest --coverage --typecheck && pnpm gen:all",
     "gen:all": "./bin/run --all",
     "gen:example": "./bin/run --config example",
     "gen:config": "./bin/run --config config",
@@ -37,6 +37,7 @@
     "bin"
   ],
   "license": "MIT",
+  "packageManager": "pnpm@10.17.0",
   "dependencies": {
     "@oclif/core": ">=3.26.0",
     "@typescript/vfs": "^1.5.0",
