--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "lint": "eslint . --ext=.js,.ts,.json --report-unused-disable-directives --max-warnings 0",
     "lint:fix": "npm run lint -- --fix",
     "test": "vitest",
-    "test:ci": "vitest --coverage --typecheck && pnpm gen:all",
+    "test:ci": "vitest --coverage --typecheck",
     "gen:all": "./bin/run --all",
     "gen:example": "./bin/run --config example",
     "gen:config": "./bin/run --config config",
