feat!: Convert to ESM and cleanup external deps
Dependencies updates:
* Update chokidar
* Remove fs-extra
* Replace inquirer/rxjs with @clack/prompts
* Replace ora with listr2
* Remove threads

The project is now in esm, and require the config to be `.cjs` or `.mjs` (breaking change). The migration is part of the CLI experience to ease the process.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,9 @@
 {
   "compilerOptions": {
-    "module": "commonjs",
+    "module": "nodenext",
+    "moduleResolution": "nodenext",
     "outDir": "lib",
-    "target": "es2017",
+    "target": "esnext",
     "allowSyntheticDefaultImports": true,
     "importHelpers": true,
     "strict": true,
