--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "homepage": "https://github.com/fabien0102/ts-to-zod",
   "bugs": "https://github.com/fabien0102/ts-to-zod/issues",
   "repository": "fabien0102/ts-to-zod",
+  "type": "module",
   "keywords": [
     "zod",
     "typescript",
@@ -39,18 +40,14 @@
   "license": "MIT",
   "packageManager": "pnpm@10.17.0",
   "dependencies": {
+    "@clack/prompts": "1.0.0-alpha.4",
     "@oclif/core": "^4.5.4",
     "@typescript/vfs": "^1.5.0",
     "case": "^1.6.3",
-    "chokidar": "^3.5.1",
-    "fs-extra": "^11.1.1",
-    "inquirer": "^8.2.0",
-    "lodash": "^4.17.21",
-    "ora": "^5.4.0",
+    "chokidar": "^4.0.3",
+    "listr2": "^9.0.4",
     "prettier": "3.0.3",
-    "rxjs": "^7.4.0",
     "slash": "^3.0.0",
-    "threads": "^1.7.0",
     "tslib": "^2.3.1",
     "tsutils": "^3.21.0",
     "typescript": "^5.2.2",
@@ -63,8 +60,7 @@
     "@babel/preset-typescript": "^7.23.2",
     "@types/fs-extra": "^11.0.3",
     "@types/inquirer": "^8.1.3",
-    "@types/lodash": "^4.14.168",
-    "@types/node": "^12.7.11",
+    "@types/node": "^24.5.2",
     "@typescript-eslint/eslint-plugin": "^6.9.1",
     "@typescript-eslint/parser": "^6.9.1",
     "@vitest/coverage-v8": "3.2.4",
