--- a/package.json
+++ b/package.json
@@ -43,11 +43,11 @@
     "@clack/prompts": "1.0.0-alpha.4",
     "@oclif/core": "^4.5.4",
     "@typescript/vfs": "^1.5.0",
-    "case": "^1.6.3",
     "chokidar": "^4.0.3",
     "listr2": "^9.0.4",
     "prettier": "3.6.2",
     "slash": "^5.1.0",
+    "text-case": "^1.2.4",
     "tslib": "^2.3.1",
     "tsutils": "^3.21.0",
     "typescript": "^5.2.2",
