Ensure the typecheck is done
Vitest doesn’t typecheck our example file (out of the scope)

--- a/package.json
+++ b/package.json
@@ -23,8 +23,9 @@
     "prepublishOnly": "pnpm test:ci && rimraf lib && pnpm build",
     "lint": "eslint . --ext=.js,.ts,.json --report-unused-disable-directives --max-warnings 0",
     "lint:fix": "npm run lint -- --fix",
+    "typecheck": "tsc --noEmit --watch",
     "test": "vitest",
-    "test:ci": "vitest --coverage --typecheck",
+    "test:ci": "vitest --coverage && tsc --noEmit",
     "gen:all": "./bin/run --all",
     "gen:example": "./bin/run --config example",
     "gen:config": "./bin/run --config config",
