--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "homepage": "https://github.com/fabien0102/ts-to-zod",
   "bugs": "https://github.com/fabien0102/ts-to-zod/issues",
   "repository": "fabien0102/ts-to-zod",
+  "type": "module",
   "keywords": [
     "zod",
     "typescript",
@@ -22,12 +23,13 @@
     "prepublishOnly": "pnpm test:ci && rimraf lib && pnpm build",
     "lint": "eslint . --ext=.js,.ts,.json --report-unused-disable-directives --max-warnings 0",
     "lint:fix": "npm run lint -- --fix",
+    "typecheck": "tsc --noEmit --watch",
     "test": "vitest",
-    "test:ci": "vitest --coverage --typecheck",
-    "gen:all": "./bin/run --all",
-    "gen:example": "./bin/run --config example",
-    "gen:config": "./bin/run --config config",
-    "prepare": "husky install"
+    "test:ci": "vitest --coverage && tsc --noEmit",
+    "gen:all": "node ./bin/run --all && pretty-quick",
+    "gen:example": "node ./bin/run --config example && pretty-quick",
+    "gen:config": "node ./bin/run --config config && pretty-quick",
+    "prepare": "husky"
   },
   "files": [
     "LICENSE",
@@ -39,18 +41,13 @@
   "license": "MIT",
   "packageManager": "pnpm@10.17.0",
   "dependencies": {
+    "@clack/prompts": "1.0.0-alpha.4",
     "@oclif/core": "^4.5.4",
     "@typescript/vfs": "^1.5.0",
-    "case": "^1.6.3",
-    "chokidar": "^3.5.1",
-    "fs-extra": "^11.1.1",
-    "inquirer": "^8.2.0",
-    "lodash": "^4.17.21",
-    "ora": "^5.4.0",
-    "prettier": "3.0.3",
-    "rxjs": "^7.4.0",
-    "slash": "^3.0.0",
-    "threads": "^1.7.0",
+    "chokidar": "^4.0.3",
+    "listr2": "^9.0.4",
+    "slash": "^5.1.0",
+    "text-case": "^1.2.4",
     "tslib": "^2.3.1",
     "tsutils": "^3.21.0",
     "typescript": "^5.2.2",
@@ -61,19 +58,21 @@
     "@babel/core": "^7.23.2",
     "@babel/preset-env": "^7.23.2",
     "@babel/preset-typescript": "^7.23.2",
+    "@eslint/eslintrc": "^3.3.1",
+    "@eslint/js": "^9.36.0",
     "@types/fs-extra": "^11.0.3",
     "@types/inquirer": "^8.1.3",
-    "@types/lodash": "^4.14.168",
-    "@types/node": "^12.7.11",
-    "@typescript-eslint/eslint-plugin": "^6.9.1",
-    "@typescript-eslint/parser": "^6.9.1",
+    "@types/node": "^24.5.2",
+    "@typescript-eslint/eslint-plugin": "^8.44.1",
+    "@typescript-eslint/parser": "^8.44.1",
     "@vitest/coverage-v8": "3.2.4",
     "auto-changelog": "^2.4.0",
-    "eslint": "^8.53.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-prettier": "^5.0.1",
-    "husky": "^8.0.3",
-    "pretty-quick": "^3.1.0",
+    "eslint": "^9.36.0",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-prettier": "^5.5.4",
+    "husky": "^9.1.7",
+    "prettier": "3.6.2",
+    "pretty-quick": "5.0.0-next.2",
     "rimraf": "^5.0.5",
     "ts-node": "^10.9.1"
   },
